--- a/package.json
+++ b/package.json
@@ -9,19 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.21.1",
     "@reduxjs/toolkit": "^2.3.0",
     "@solana/web3.js": "^1.95.4",
+    "axios": "^1.7.7",
     "bip39": "^3.1.0",
     "bs58": "^6.0.0",
+    "dotenv": "^16.4.5",
     "ed25519-hd-key": "^1.3.0",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.446.0",
     "next": "14.2.13",
+    "prisma": "^5.21.1",
     "react": "^18",
     "react-dom": "^18",
     "react-redux": "^9.1.2",
     "tweetnacl": "^1.0.3"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
